# file_synchronizer

./: .clang-format  .gitignore  CMakeLists.txt  codeStyleGuidelines.md  networkConfig.json  streamConfig.json
.github/workflows/: build.yml
inc/: File.hpp  FileSynchronizer.hpp  Folder.hpp  Scanner.hpp  Serializer.hpp  ThreadPool.hpp  UserInterface.hpp  config_manager.hpp  controller.hpp  file_streamer.hpp  file_synchronizer.hpp  i_View.hpp  i_ViewListener.hpp  logger.hpp  model.hpp  scanner.hpp  serializer.hpp  streaming.hpp  thread_pool.hpp  thread_pool_provider.hpp  timer.hpp  userInterface.hpp  utils.hpp  view.hpp  view_ftx.cpp  view_ftx.hpp
inc/ftxui/dom/: canvas.hpp  deprecated.hpp  elements.hpp  node.hpp  requirement.hpp
inc/ftxui/screen/: screen.hpp  string.hpp
inc/ftxui/util/: ref.hpp
src/: CMakeLists.txt  FileSynchronizer.cpp  Scanner.cpp  Serializer.cpp  UserInterface.cpp  config_manager.cpp  controller.cpp  file_streamer.cpp  file_synchronizer.cpp  logger.cpp  main.cpp  model.cpp  scanner.cpp  serializer.cpp  streaming.cpp  thread_pool.cpp  timer.cpp  userInterface.cpp  view.cpp  view_console.cpp  view_ftx.cpp
src/inc/: model.hpp  scanner.hpp  timer.hpp  view.hpp  view_console.hpp  view_ftx.hpp
tests/: CMakeLists.txt  main.cpp  model_ut.cpp  scanner_mock.hpp  scanner_test.hpp  serializer_mock.hpp  synchronizer_mock.hpp  synchronizer_test.hpp  timer_mock.hpp  userInterface-ut.cpp
